# led-matrix

./: README.md  mkdocs.yml
casing/: F4-2.FCStd  F4-2.FCStd1  board.FCStd
circuit/: LEDMatrix-cache.lib  LEDMatrix.kicad_pcb  LEDMatrix.kicad_pcb-bak  LEDMatrix.pro  LEDMatrix.sch  LEDMatrix.sch-bak  LedMatrix-Symbols.lib  fp-info-cache  fp-lib-table  sym-lib-table
circuit/3D-Package/: Crystal-5032-2P.stp
circuit/LEDMatrix.pretty/: JDY-08.kicad_mod  JDY-08_HandSoldering.kicad_mod  TerminalBlock_JL301-5.00-2P.kicad_mod  TerminalBlock_JL301-5.00-3P.kicad_mod
circuit/archived/LEDMatrix-MK1B1/: LEDMatrix-POS.csv  LEDMatrix_BOM.csv
demo/BLE_MiniProgramDemo/: app.json  package-lock.json  package.json
demo/BLE_MiniProgramDemo/pages/device/: device.js  device.wxml  device.wxss
demo/BLE_MiniProgramDemo/protocol/: packages.js  struct-fu.js
docs/: ble_protocol.md  fw_build.md  hardware.md  index.md  intro.md
docs/fw/: how_to_build.md
docs/hw/: board.md  casing.md  design.md
docs/protocol/: ble_protocol.md  packages.md
firmware/: .editorconfig  .gitignore  .mxproject  CMakeLists.txt  LEDMatrix.gpdsc  LEDMatrix.ioc  build-release.bat  build.bat
firmware/Inc/: comm.h  display.h  main.h  messages.h  settings.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  utils.h
firmware/Inc/devices/: devices.h  indicator.h  jdy08.h  ws2812.h
firmware/Lib/nanopb/: pb_common.c  pb_decode.c  pb_encode.c
firmware/Src/: comm.c  display.c  freertos.c  main.c  settings.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  utils.c
firmware/Src/devices/: indicator.c  jdy08.c  ws2812.c
